objects/ssot__ProductServiceCampaign__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Product Service Campaign Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductId__c</fullName>
        <label>Product</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignPriority__c</fullName>
        <label>Product Service Campaign Priority</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignStatus__c</fullName>
        <label>Product Service Campaign Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCampaignType__c</fullName>
        <label>Product Service Campaign Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProductServiceCmpnStatusCategory__c</fullName>
        <label>Product Service Cmpn Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__WorkTypeId__c</fullName>
        <label>Work Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061033034_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductServiceCampaign_OwnerId_map_U_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ProductServiceCampaign_OwnerId_map_U_rel</relationshipLabel>
        <relationshipName>rel_1705061033034_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061034259_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductServiceCampaign_ProductId_map_rel</label>
        <referenceTo>ssot__Product__dlm</referenceTo>
        <relationshipLabel>ProductServiceCampaign_ProductId_map_rel</relationshipLabel>
        <relationshipName>rel_1705061034259_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1705061035084_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProductServiceCampaign_WorkTypeId_ma_rel</label>
        <referenceTo>ssot__WorkType__dlm</referenceTo>
        <relationshipLabel>ProductServiceCampaign_WorkTypeId_ma_rel</relationshipLabel>
        <relationshipName>rel_1705061035084_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>